@@ -1,3 +1,11 @@
+2006-08-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* UI/Scheduler/UIxAppointmentEditor.m: invoke
+	"stringByEscapingHTMLString" on the resulting value to avoid
+	issues with accented characters.
+	([-jsCode]): removed method since the javascript code was merged
+	into SchedulerUI.js.
+
 2006-08-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* UI/Scheduler/iCalPerson+UIx.m ([iCalPerson +personWithUid:]):
